third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-datetime/month-under.stderr
TOML parse error at line 2, column 10
  |
2 | d = 2007-00-01T00:00:00
  |          ^
invalid date-time
value is out of range
